Bugfix: Invisible link focus
Clearing those dotted box around links when selected.

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {position: relative; min-height: 100%; min-width:100%}
 html, body{font-family: 'Open Sans', sans-serif; background-color: #f4f5fc;/*Fall Back*/}
 a { color: #282f35; -webkit-transition: all .25s ease; -moz-transition: all .25s ease; -ms-transition: all .25s ease; -o-transition: all .25s ease; transition: all .25s ease; }
 a:hover { color: #64c29e; text-decoration: none; }
+a:focus{outline:0;text-decoration: none;}
 p {font-size: 14px; color: #282f35; font-weight: 300; word-spacing: 2px; line-height: 1.8em;}
 h1{font-size: 28px;margin-top:0px;margin-bottom:10px;}
 h2{font-size: 24px;margin-top:0px;margin-bottom:10px;}
